# test

./: .editorconfig  .gitmodules  Bluehill.Bcd.sln  ChromeTest.sln  Directory.Build.props  Directory.Build.targets  Directory.Packages.props  Dnvm.sln  LICENSE  Ndnm.sln  ProjectBabylon.sln  README.md  RockPaperScissors.py  ayyyyy.html  blink.html  index.html  nothing.c  popomi.c
.github/: dependabot.yml
App1/: App1.sln  Directory.Packages.props
BlazorTest/: BlazorTest.csproj
Bluehill.Bcd/: BcdDeviceData.cs  BcdDeviceFileData.cs  BcdDeviceLocateData.cs  BcdDeviceLocateElementChildData.cs  BcdDeviceLocateStringData.cs  BcdDevicePartitionData.cs  BcdDeviceQualifiedPartitionData.cs  BcdDeviceUnknownData.cs  BcdElementType.cs  BcdException.cs  BcdObject.cs  BcdObjectType.cs  BcdStore.cs  Bluehill.Bcd.csproj  Bluehill.Bcd.sln  CallerMemberNameAttribute.cs  CopyObjectOptions.cs  DeviceType.cs  Directory.Build.props  Directory.Packages.props  ExceptionExtensions.cs  GetElementWithFlagsOptions.cs  GlobalSuppressions.cs  Internal.cs  RequiresAdministratorException.cs  WellKnownGuids.cs  packages.lock.json
Bluehill.Bcd.Test/: BcdStoreTest.cs  Bluehill.Bcd.Test.csproj  Constants.cs  GlobalSuppressions.cs
Bluehill.Bcd.Tests/: BcdStoreTest.cs  Bluehill.Bcd.Tests.csproj  Constants.cs  GlobalSuppressions.cs  packages.lock.json
Bluehill.Vhd/: Bluehill.Vhd.sln  Directory.Build.props  Directory.Packages.props  README.md
JunctionCreator/: .gitignore  Cargo.toml  build.rs  resource.h  resources.rc
JunctionCreator/src/: junction_creator.rs  junction_creator_factory.rs  lib.rs
(+441 files in other folders)
