[package]
name = "junctioncreator"
version = "0.0.0"
edition = "2024"

[lib]
name = "JunctionCreator"
crate-type = ["cdylib"]

[dependencies]
windows-core = "0.62.2"

[dependencies.windows]
version = "0.62.2"
features = [
    "Win32_Globalization",
    "Win32_Graphics_Gdi",
    "Win32_Storage_FileSystem",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_LibraryLoader",
    "Win32_System_Ole",
    "Win32_System_Registry",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_UI_Shell_Common",
    "Win32_UI_WindowsAndMessaging",
]

[build-dependencies]
embed-resource = "3.0.6"
